--- a/Src/IntegrationPackage/IntegrationPackage.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.csproj
@@ -125,7 +125,7 @@
       <DependentUpon>FooView.xaml</DependentUpon>
     </Compile>
     <Compile Include="ForcePackageLoadComponent.cs" />
-    <Compile Include="IShellPackage.cs" />
+    <Compile Include="IShellComponent.cs" />
     <Compile Include="MyControl.xaml.cs">
       <DependentUpon>MyControl.xaml</DependentUpon>
     </Compile>
@@ -141,6 +141,7 @@
     </None>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleCommand.cs" />
+    <Compile Include="ShellComponent.cs" />
     <Compile Include="ShellPackage.cs" />
   </ItemGroup>
   <ItemGroup>
