--- a/Src/Clide.props
+++ b/Src/Clide.props
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <OutputPath>bin\$(Configuration)\</OutputPath>
+        <OutputPath>bin\$(VisualStudioVersion)\</OutputPath>
     </PropertyGroup>
     <PropertyGroup Condition="'$(VisualStudioVersion)' == '11.0'">
         <DefineConstants>$(DefineConstants);v11</DefineConstants>
