Restored behavior that published Clide-aware exports to the VS global container. Changed behavior to require the vsixmanifest to have a <CustomExtension Type="ClideComponent">[assembly] element, which denotes the components that should be MEF-exported by Clide to the VS global composition container. All tests passing in VS2010 and VS2012 with a single assembly. YAY!

--- a/Src/Clide.targets
+++ b/Src/Clide.targets
@@ -4,7 +4,7 @@
         <Error Condition="'$(VisualStudioVersion)' == ''"
                ContinueOnError="false"
                Text="Please provide the VisualStudioVersion property as a parameter to MSBuild to specify the target version of VS to build the extension for (i.e. '10.0' or '11.0')." />
-        <Message Text="Building for Visual Studio version $(VisualStudioVersion), Target Framework Version $(TargetFrameworkVersion), Platform $(Platform)"
+        <Message Text="Building for Visual Studio $(VisualStudioVersion), Target Framework $(TargetFrameworkVersion), Platform $(Platform)"
                  Importance="high" />
     </Target>
 </Project>
