--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -40,55 +40,55 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(PublicAssemblies)EnvDTE.dll</HintPath>
         </Reference>
         <Reference Include="EnvDTE80, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(PublicAssemblies)EnvDTE80.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(PublicAssemblies)Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.OLE.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(PrivateAssemblies)Microsoft.VisualStudio.OLE.Interop.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Settings, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=x86">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Settings.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.10.0.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Design, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Design.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Immutable.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Immutable.10.0.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Interop, Version=7.1.40304.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Interop.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Interop.10.0, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Interop.10.0.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Interop.8.0, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Interop.8.0.dll</HintPath>
         </Reference>
         <Reference Include="Microsoft.VisualStudio.Shell.Interop.9.0, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(VSSDK)Microsoft.VisualStudio.Shell.Interop.9.0.dll</HintPath>
         </Reference>
         <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-            <SpecificVersion>False</SpecificVersion>
+            <SpecificVersion>True</SpecificVersion>
             <HintPath>$(PublicAssemblies)VSLangProj.dll</HintPath>
         </Reference>
     </ItemGroup>
