* Expose CompositionContainer directly on IDevEnv. This simplifies many scenarios where you want to interact with the container. Users can still import ICompositionService. * Added support for intercepting arbitrary commands in the IDE via simple exports of ICommandInterceptor components, automatically registered when the host is initialized.
Rev'ed to v3

--- a/Src/Clide/Clide.csproj
+++ b/Src/Clide/Clide.csproj
@@ -111,6 +111,9 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CommandInterceptorAttribute.cs" />
+    <Compile Include="Commands\ICommandInterceptor.cs" />
+    <Compile Include="Commands\ICommandInterceptorMetadata.cs" />
     <Compile Include="netfx\System\AmbientSingleton.cs" />
     <Compile Include="netfx\System\Collections\Generic\IEnumerable\TraverseKind.cs" />
     <Compile Include="netfx\System\Collections\Generic\IEnumerable\Traverser.cs" />
