--- a/Src/IntegrationPackage/IntegrationPackage.2010.csproj
+++ b/Src/IntegrationPackage/IntegrationPackage.2010.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adornment.cs" />
+    <Compile Include="BuildCommandInterceptor.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="FooOptionsPage.cs">
       <SubType>Component</SubType>
